--- a/Deep Learning/Transformer/SwinTransformer.ipynb
+++ b/Deep Learning/Transformer/SwinTransformer.ipynb
@@ -180,6 +180,44 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([9, 9, 2])\n",
+      "tensor([[ 0,  0,  0,  1,  1,  1,  2,  2,  2],\n",
+      "        [ 0,  0,  0,  1,  1,  1,  2,  2,  2],\n",
+      "        [ 0,  0,  0,  1,  1,  1,  2,  2,  2],\n",
+      "        [-1, -1, -1,  0,  0,  0,  1,  1,  1],\n",
+      "        [-1, -1, -1,  0,  0,  0,  1,  1,  1],\n",
+      "        [-1, -1, -1,  0,  0,  0,  1,  1,  1],\n",
+      "        [-2, -2, -2, -1, -1, -1,  0,  0,  0],\n",
+      "        [-2, -2, -2, -1, -1, -1,  0,  0,  0],\n",
+      "        [-2, -2, -2, -1, -1, -1,  0,  0,  0]])\n",
+      "tensor([[ 0,  1,  2,  0,  1,  2,  0,  1,  2],\n",
+      "        [-1,  0,  1, -1,  0,  1, -1,  0,  1],\n",
+      "        [-2, -1,  0, -2, -1,  0, -2, -1,  0],\n",
+      "        [ 0,  1,  2,  0,  1,  2,  0,  1,  2],\n",
+      "        [-1,  0,  1, -1,  0,  1, -1,  0,  1],\n",
+      "        [-2, -1,  0, -2, -1,  0, -2, -1,  0],\n",
+      "        [ 0,  1,  2,  0,  1,  2,  0,  1,  2],\n",
+      "        [-1,  0,  1, -1,  0,  1, -1,  0,  1],\n",
+      "        [-2, -1,  0, -2, -1,  0, -2, -1,  0]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp = get_relative_distances(window_size = 3)\n",
+    "print(tmp.size())\n",
+    "print(tmp[:,:,0])\n",
+    "print(tmp[:,:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class WindowAttention(nn.Module):\n",
@@ -286,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +468,7 @@
        "torch.Size([1, 3])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +535,7 @@
        "==========================================================================================================================================================="
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
